# genesis-agi

./: .env.example  .gitignore  LICENSE  README.md  genesis_agi.db  pyproject.toml  requirements.txt
artifacts/20241231_225338/: current_tasks.json  performance_metrics.json  task_history.json
artifacts/20250105_173210/: current_tasks.json  performance_metrics.json  task_history.json
artifacts/20250105_173725/: current_tasks.json  task_history.json
data/: customer_data.csv
examples/: autonomous_meta_learning_example.py  autonomous_workflow_example.py  basic_usage.py  distributed_cache.py
genesis_agi/: __init__.py  task_manager.py
genesis_agi/context/: context_manager.py
genesis_agi/core/: meta_learner.py  meta_learning.py  unified_manager.py
genesis_agi/llm/: client.py  prompt_manager.py  prompts.py
genesis_agi/models/: operator.py  task.py  task_record.py
genesis_agi/operators/: __init__.py  autonomous_manager.py  base.py  base_operator.py  data_analysis_operator.py  operator_factory.py  operator_generator.py  operator_registry.py  pipeline.py  recommendation_operator.py  self_improvement_operator.py  task_creation.py  task_creation_operator.py  task_execution.py  task_execution_operator.py  task_prioritization.py  task_prioritization_operator.py
genesis_agi/utils/: cache.py  cache_backends.py  cache_types.py  code_loader.py  semantic_search.py
scripts/: init_db.py
tests/: test_cache.py  test_task_manager.py
